<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/list_item_background_normal"
        android:hint="@string/question_title_hint"
        android:padding="@dimen/space_12"
        android:textColor="@color/main_black"
        android:textColorHint="@color/main_gray"
        android:textSize="@dimen/text_size_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="@dimen/space_8"
        android:background="@color/list_divider_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/list_divider_color" />

    <LinearLayout
        android:id="@+id/ly_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_background"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/space_12" >

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question_public_category"
            android:textColor="@color/main_black"
            android:textSize="@dimen/text_size_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_item_goto_right_tip" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="@dimen/space_8"
        android:background="@color/list_divider_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/list_divider_color" />

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/list_item_background_normal"
        android:gravity="top|left"
        android:hint="@string/question_public_content"
        android:padding="@dimen/space_12"
        android:textColor="@color/main_black"
        android:textSize="@dimen/text_size_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/list_divider_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/list_item_background_normal"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/space_8"
        android:paddingLeft="@dimen/space_12"
        android:paddingTop="@dimen/space_8" >

        <CheckBox
            android:id="@+id/cb_let_me_know" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:button="@null"
            android:drawableLeft="@drawable/btn_checkbox_selector"
            android:text="@string/question_public_let_me_know"
            android:textColor="@color/main_gray"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>

</LinearLayout>